Bugfix: sync color scheme rename with profile reference (#8793)
## Summary of the Pull Request
This fixes a bug where renaming/deleting a color scheme would not update profiles that referenced it.

This also adds detection for renaming a color scheme to a name that is already in use, and adds appropriate UI for that.

## References
#6800 - Settings UI Epic

## PR Checklist
* [X] Closes #8756 

## Detailed Description of the Pull Request / Additional comments
`Model::CascadiaSettings` was updated to have a `UpdateColorSchemeReferences()` function that updates all profiles referencing the newly renamed color scheme.

`Editor::ColorSchemesPageNavigationState` now takes and exposes a `Model::CascadiaSettings`.

When a color scheme is renamed or deleted, we use `CascadiaSettings` to update our list of color schemes appropriately, then call `UpdateColorSchemeReferences()` to update the profiles.

The tricky part is that `Profile` does not store a direct reference to `ColorScheme`, but rather the name of the color scheme. See [this tread](https://github.com/microsoft/terminal/issues/8756#issuecomment-760375027) for a discussion on this topic.

## Validation Steps Performed
Repro steps from #8756 when renaming/deleting a referenced color scheme.

## Demo
![Scheme Name Already In Use Demo](https://user-images.githubusercontent.com/11050425/105431427-6e023980-5c0a-11eb-894a-42152fc77f05.gif)

--- a/src/cascadia/TerminalSettingsEditor/ColorSchemes.xaml
+++ b/src/cascadia/TerminalSettingsEditor/ColorSchemes.xaml
@@ -6,6 +6,7 @@ the MIT License. See LICENSE in the project root for license information. -->
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Microsoft.Terminal.Settings.Editor"
     xmlns:model="using:Microsoft.Terminal.Settings.Model"
+    xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
@@ -97,9 +98,17 @@ the MIT License. See LICENSE in the project root for license information. -->
 
                 <StackPanel Orientation="Horizontal"
                             Visibility="{x:Bind IsRenaming, Mode=OneWay}">
+
+                    <!--Shown when color scheme name is already in use-->
+                    <muxc:TeachingTip x:Name="RenameErrorTip"
+                                      x:Uid="ColorScheme_RenameErrorTip"/>
+
+                    <!--Name text box-->
                     <TextBox x:Name="NameBox"
                              Style="{StaticResource TextBoxSettingStyle}"
                              PreviewKeyDown="NameBox_PreviewKeyDown"/>
+
+                    <!--Accept rename button-->
                     <Button x:Uid="RenameAccept"
                             Style="{StaticResource AccentSmallButtonStyle}"
                             Click="RenameAccept_Click">
@@ -108,6 +117,7 @@ the MIT License. See LICENSE in the project root for license information. -->
                                       FontSize="{StaticResource StandardIconSize}"/>
                         </StackPanel>
                     </Button>
+                    <!--Cancel rename button-->
                     <Button x:Uid="RenameCancel"
                             Style="{StaticResource SmallButtonStyle}"
                             Click="RenameCancel_Click">
